解决 H5新版复刻 47554 bug

--- a/src/i18n/h5/en-gb/index.json
+++ b/src/i18n/h5/en-gb/index.json
@@ -22,7 +22,7 @@
     "age": "age",
     "analysis_data": "Data",
     "away_win": "A win",
-    "bench_lineup": "Bench Lineup",
+    "bench_lineup": "Bench List",
     "big": "O",
     "big_ball": "Over",
     "Big_ball_rate": "O%",
@@ -47,7 +47,7 @@
     "home_win1": "H win",
     "immediate": "immediate",
     "Initial_offer": "Initial offer",
-    "Injury_situation": "Injury Situation",
+    "Injury_situation": "Injury List",
     "integral": "Pts",
     "intelligence": "Intelligence",
     "Interval_days": "Gap Day",
