--- a/src/i18n/h5/id-id/index.json
+++ b/src/i18n/h5/id-id/index.json
@@ -30,7 +30,6 @@
     "age": "Usia",
     "analysis_data": "Data",
     "away_win": "",
-    "bench_lineup": "Formasi subsitusi",
     "big": "O",
     "big_ball": "Over",
     "Big_ball_rate": "O%",
@@ -55,7 +54,8 @@
     "home_win1": "Home",
     "immediate": "Segera",
     "Initial_offer": "Bursa awal",
-    "Injury_situation": "Injury Time",
+    "bench_lineup": "Daftar Bangku",
+    "Injury_situation": "Daftar Cedera",
     "integral": "Poin",
     "intelligence": "Info",
     "Interval_days": "Gap (hari)",
