--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -22,7 +22,6 @@
     "age": "อายุ",
     "analysis_data": "ข้อมูล",
     "away_win": "Aชนะ",
-    "bench_lineup": "ทดแทน",
     "big": "O",
     "big_ball": "Over",
     "Big_ball_rate": "O%",
@@ -47,7 +46,8 @@
     "home_win1": "Hชนะ",
     "immediate": "ทันที",
     "Initial_offer": "ข้อเสนอแรก",
-    "Injury_situation": "สถานการณ์การบาดเจ็บ",
+    "bench_lineup": "替补名单",
+    "Injury_situation": "伤停名单",
     "integral": "Pts",
     "intelligence": "ข้อมูล",
     "Interval_days": "ช่วงเวลา (วัน)",
