--- a/src/i18n/h5/vi-vn/index.json
+++ b/src/i18n/h5/vi-vn/index.json
@@ -22,7 +22,6 @@
     "age": "Tuổi",
     "analysis_data": "Dữ liệu",
     "away_win": "K",
-    "bench_lineup": "Đội hình dự bị",
     "big": "O",
     "big_ball": "Trên",
     "Big_ball_rate": "% T",
@@ -47,7 +46,8 @@
     "home_win1": "C",
     "immediate": "Tức thời",
     "Initial_offer": "Ban đầu",
-    "Injury_situation": "Chấn thương",
+    "bench_lineup": "Danh sách băng ghế dự bị",
+    "Injury_situation": "Danh sách chấn thương",
     "integral": "Điểm",
     "intelligence": "Thông tin",
     "Interval_days": "Cách(Ngày)",
