--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -163,7 +163,8 @@
     "age": "年龄",
     "analysis_data": "数据",
     "away_win": "客胜",
-    "bench_lineup": "替补阵容",
+    "bench_lineup": "替补名单",
+    "Injury_situation": "伤停名单",
     "big": "大",
     "big_ball": "大球",
     "Big_ball_rate": "大球率",
@@ -188,7 +189,6 @@
     "home_win1": "主胜",
     "immediate": "即时",
     "Initial_offer": "初盘",
-    "Injury_situation": "伤停情况",
     "integral": "积分",
     "intelligence": "情报",
     "Interval_days": "间隔(天)",
