--- a/src/i18n/h5/zh-tw/index.json
+++ b/src/i18n/h5/zh-tw/index.json
@@ -23,7 +23,7 @@
     "age": "年齡",
     "analysis_data": "數據",
     "away_win": "客胜",
-    "bench_lineup": "替補陣容",
+    "bench_lineup": "替補名單",
     "big": "大",
     "big_ball": "大球",
     "Big_ball_rate": "大球率",
@@ -48,7 +48,7 @@
     "home_win1": "主胜",
     "immediate": "即時",
     "Initial_offer": "初盤",
-    "Injury_situation": "傷停情況",
+    "Injury_situation": "傷停名單",
     "integral": "積分",
     "intelligence": "情报",
     "Interval_days": "間隔(天)",
