--- a/src/i18n/h5/ms-my/index.json
+++ b/src/i18n/h5/ms-my/index.json
@@ -29,7 +29,6 @@
     "age": "Umur",
     "analysis_data": "Data",
     "away_win": "Away",
-    "bench_lineup": "Bench Lineup",
     "big": "O",
     "big_ball": "Over",
     "Big_ball_rate": "% over",
@@ -54,7 +53,8 @@
     "home_win1": "Home",
     "immediate": "Immediate",
     "Initial_offer": "Initial",
-    "Injury_situation": "Injuries",
+    "bench_lineup": "Senarai Bangku",
+    "Injury_situation": "Senarai Kecederaan",
     "integral": "Point",
     "intelligence": "Related",
     "Interval_days": "Julat (day)",
