投注记录细节调整

--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -389,6 +389,7 @@
     "bet_sum_val": "总投注额",
     "bet_suopan_info": "赔率更新中，请稍后",
     "bet_time": "投注时间",
+    "settle_time": "结算时间",
     "bet_val": "投注额",
     "bet_val2": "投注",
     "bet_win": "赢",
