投注记录细节调整

--- a/src/i18n/h5/en-gb/index.json
+++ b/src/i18n/h5/en-gb/index.json
@@ -247,6 +247,7 @@
     "bet_sum_val": "Stake",
     "bet_suopan_info": "The odds are being updated, please wait a second !",
     "bet_time": "Betting Time",
+    "settle_time": "settled Time",
     "bet_val": "Place Bet",
     "bet_val2": "Bet Amount",
     "bet_win": "Win",
