--- a/src/i18n/h5/id-id/index.json
+++ b/src/i18n/h5/id-id/index.json
@@ -1788,7 +1788,8 @@
     "msg_nodata_19": "Ayo pesan",
     "msg_nodata_20": "Hi maaf, laman hlg",
     "msg_nodata_21": "Tenang, tkn\"refresh\" & segera ketemu~",
-    "msg_nodata_22": "Terlalu banyak akses saat ini, coba bbrp saat lagi"
+    "msg_nodata_22": "Terlalu banyak akses saat ini, coba bbrp saat lagi",
+    "msg_nodata_23": "Segera datang"
   },
   "myScroll": {
     "msg1": "Tarik utk refresh",
