--- a/src/i18n/h5/ko-ko/index.json
+++ b/src/i18n/h5/ko-ko/index.json
@@ -1804,7 +1804,8 @@
     "msg_nodata_17": "메시지가 기록되지 않습니다",
     "msg_nodata_22": "현재 방문자 수가 너무 많습니다. 나중에 다시 시도해 주세요.",
     "msg_nodata_21": "긴장하지 말고 \"새로고침\"을 클릭하면 즉시 되돌릴 수 있습니다~",
-    "msg_nodata_20": "안녕하세요, 안타깝게도 페이지가 손실되었습니다"
+    "msg_nodata_20": "안녕하세요, 안타깝게도 페이지가 손실되었습니다",
+    "msg_nodata_23": "곧 오세요"
   },
   "myScroll": {
     "msg1": "아래로 당겨 새로 고침",
