--- a/src/i18n/h5/ms-my/index.json
+++ b/src/i18n/h5/ms-my/index.json
@@ -1786,7 +1786,8 @@
     "msg_nodata_19": "Book",
     "msg_nodata_20": "Hai. Halaman hilang",
     "msg_nodata_21": "Jgn panik. Klik Segar cari semula ~",
-    "msg_nodata_22": "Ramai pengguna mengakses Cuba lagi"
+    "msg_nodata_22": "Ramai pengguna mengakses Cuba lagi",
+    "msg_nodata_23": "datang segera"
   },
   "myScroll": {
     "msg1": "Pull dan segar",
