--- a/src/i18n/h5/mya-mya/index.json
+++ b/src/i18n/h5/mya-mya/index.json
@@ -1789,7 +1789,8 @@
     "msg_nodata_17": "သတင်းမှတ်တမ်းမရှိပါ။",
     "msg_nodata_22": "",
     "msg_nodata_21": "စိတ်မပူပါနှင့်၊ ပြန်လည်ရယူရန် \"Refresh\" ကိုနှိပ်ပါ။",
-    "msg_nodata_20": "မင်္ဂလာပါ ကံမကောင်းစွာနဲ့ပဲ page ပျက်သွားတယ်။"
+    "msg_nodata_20": "မင်္ဂလာပါ ကံမကောင်းစွာနဲ့ပဲ page ပျက်သွားတယ်။",
+    "msg_nodata_23": "မကြာမီလာပါ"
   },
   "myScroll": {
     "msg1": "ပြန်လည်ဆန်းသစ်ရန် ဆွဲပါ။",
