--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -1800,7 +1800,8 @@
     "msg_nodata_19": "ไปจอง",
     "msg_nodata_20": "สวัสดี， ขออภัย เพจหาย",
     "msg_nodata_21": "ไม่ต้องกังวล คลิก \"รีเฟรช\" เพื่อค้นหาอีกครั้ง~",
-    "msg_nodata_22": "ขณะนี้มีผู้เข้าชมมากเกินไป โปรดลองอีกครั้งในภายหลัง"
+    "msg_nodata_22": "ขณะนี้มีผู้เข้าชมมากเกินไป โปรดลองอีกครั้งในภายหลัง",
+    "msg_nodata_23": "มาเร็ว ๆ นี้"
   },
   "myScroll": {
     "msg1": "เลื่อนลงเพื่อรีเฟรช",
